--- a/app/src/main/res/layout/inventory_request_history_row.xml
+++ b/app/src/main/res/layout/inventory_request_history_row.xml
@@ -8,25 +8,46 @@
     <android.support.v7.widget.CardView
         android:id="@+id/request_history_row_cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_margin="5dp"
         app:cardBackgroundColor="@color/backgroundLight"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
         app:layout_columnWeight="1"
-        app:layout_rowWeight="1"
-        >
+        app:layout_rowWeight="1">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/req_history_row_item_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="Unit"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/req_history_row_item_qty"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
+                android:id="@+id/req_history_row_item_qty"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginEnd="112dp"
+                android:layout_marginRight="112dp"
+                android:text="Qty"
+                android:textSize="22sp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/req_history_row_item_name"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
                 android:id="@+id/req_history_row_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Item Name"
                 android:textSize="22sp"
@@ -37,9 +58,8 @@
                 android:id="@+id/req_history_row_con_name"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:text="Contractor Name"
                 android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/request_history_row_image"
@@ -49,8 +69,8 @@
                 android:id="@+id/req_history_row_date"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:text="Date: "
                 android:textSize="22sp"
@@ -61,8 +81,8 @@
                 android:id="@+id/req_history_row_date_display"
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp"
                 android:text="Validated Date"
                 android:textSize="22sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/req_history_row_date"
@@ -70,12 +90,12 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/request_history_row_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_marginLeft="16dp"
 
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
 
                 android:elevation="4dp"
                 android:src="@drawable/inventory_check"
