Getting total expenses -Ayyoob Rifdhi

--- a/app/src/main/res/layout/activity_add_plan.xml
+++ b/app/src/main/res/layout/activity_add_plan.xml
@@ -87,7 +87,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:text="Description"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
+        app:layout_constraintEnd_toStartOf="@+id/totalExp"
         app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
@@ -204,7 +204,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/totalExp"
         app:layout_constraintVertical_bias="0.73" />
     <!--android:drawableRight="@drawable/ic_file_upload_green" -->
 
