--- a/app/src/main/res/layout/activity_acti_expenses.xml
+++ b/app/src/main/res/layout/activity_acti_expenses.xml
@@ -30,17 +30,15 @@
         android:id="@+id/navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
         android:background="@color/primaryColor"
+        android:elevation="8dp"
         app:itemIconTint="@color/bttm_navbar_tab_colors"
         app:itemTextColor="@color/bttm_navbar_tab_colors"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation"
-        android:elevation="8dp"
-        />
+        app:menu="@menu/navigation" />
 
     <!--recent summary list-->
     <ListView
@@ -58,7 +56,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/buttonPadding3"
         android:layout_marginStart="@dimen/buttonPadding3"
-        android:layout_marginTop="@dimen/buttonPadding2"
+        android:layout_marginTop="80dp"
         android:background="@drawable/hammer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listView" />
@@ -70,7 +68,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/buttonPadding"
         android:layout_marginStart="@dimen/buttonPadding"
-        android:layout_marginTop="@dimen/buttonPadding2"
+        android:layout_marginTop="80dp"
         android:background="@drawable/settings"
         app:layout_constraintStart_toEndOf="@+id/directButt"
         app:layout_constraintTop_toBottomOf="@+id/listView" />
@@ -82,7 +80,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="128dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="@dimen/buttonPadding"
+        android:layout_marginTop="56dp"
         android:background="@drawable/group"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/directButt" />
@@ -94,7 +92,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/buttonPadding"
         android:layout_marginStart="@dimen/buttonPadding"
-        android:layout_marginTop="@dimen/buttonPadding"
+        android:layout_marginTop="56dp"
         android:background="@drawable/bill"
         app:layout_constraintStart_toEndOf="@+id/consultationButt"
         app:layout_constraintTop_toBottomOf="@+id/miscellaneousButt" />
@@ -103,8 +101,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/captionPadding"
-        android:layout_marginStart="@dimen/captionPadding"
+        android:layout_marginLeft="124dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="12dp"
         android:text="@string/directCost"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/directButt" />
@@ -113,8 +112,9 @@
         android:id="@+id/textView4"
         android:layout_width="@dimen/captionPadding1"
         android:layout_height="@dimen/captionPadding2"
-        android:layout_marginLeft="@dimen/captionPadding3"
-        android:layout_marginStart="@dimen/captionPadding3"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
         android:text="@string/miscellaneous"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/miscellaneousButt" />
@@ -123,8 +123,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/captionPadding"
-        android:layout_marginStart="@dimen/captionPadding"
+        android:layout_marginLeft="116dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="4dp"
         android:text="@string/consultation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/consultationButt" />
@@ -133,8 +134,9 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/captionPadding2"
-        android:layout_marginLeft="@dimen/captionPadding4"
-        android:layout_marginStart="@dimen/captionPadding4"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
         android:text="@string/overheads"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/overButt" />
@@ -163,5 +165,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/plus" />
+
+    <TextView
+        android:id="@+id/totalExp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:hint="@string/total_expense"
+        android:textColor="@color/primaryDarkColor"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listView" />
 
 </android.support.constraint.ConstraintLayout>
