--- a/app/src/main/res/layout/activity_acti_expenses.xml
+++ b/app/src/main/res/layout/activity_acti_expenses.xml
@@ -180,4 +180,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listView" />
 
+    <Button
+        android:id="@+id/report"
+        android:layout_width="100dp"
+        android:layout_height="46dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/exp_report"
+        android:layout_marginBottom="?attr/actionBarSize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
