--- a/app/src/main/res/layout/expenses_adapter_view_layout.xml
+++ b/app/src/main/res/layout/expenses_adapter_view_layout.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
+<LinearLayout android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
     android:layout_height="60dp"
-    android:weightSum="100">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 
     <TextView
-        android:gravity="center"
+        android:id = "@+id/textView1"
         android:textAlignment="center"
-        android:text="@string/desc_listadapter"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/textView1"
-        android:layout_weight="50"
-        />
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50">
-
-        <TextView
         android:gravity="center"
-        android:text="@string/category_listadapter"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/listitem_height"
-        android:id="@+id/textView2" />
+        android:layout_width = "0dp"
+        android:layout_height = "match_parent"
+        android:layout_weight = "2"
+        android:ellipsize = "end"
+        android:padding = "5dp"
+        android:text = "@string/desc_listadapter"
+        android:singleLine = "true" />
 
+    <TextView
+        android:id = "@+id/textView2"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_width = "0dp"
+        android:layout_height = "match_parent"
+        android:layout_weight = "1.25"
+        android:ellipsize = "end"
+        android:padding = "5dp"
+        android:text = "@string/category_listadapter"
+        android:singleLine = "true" />
 
-        <TextView
-            android:gravity="center"
-            android:text="@string/amount_listadapter"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/listitem_height"
-            android:id="@+id/textView3" />
-
-    </LinearLayout>
-
-    </LinearLayout>
+    <TextView
+        android:id = "@+id/textView3"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:layout_width = "0dp"
+        android:layout_height = "match_parent"
+        android:layout_weight = "1.25"
+        android:ellipsize = "end"
+        android:padding = "5dp"
+        android:text = "@string/amount_listadapter"
+        android:singleLine = "true" />
+</LinearLayout>
