--- a/app/src/main/res/layout/activity_expense_report.xml
+++ b/app/src/main/res/layout/activity_expense_report.xml
@@ -4,43 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".expenses.Expense_Category_List">
+    tools:context=".expenses.expenseReport">
 
 
 
-    <!--top appbar-->
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:elevation="8dp"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:title="@string/expenses"
-            app:titleTextColor="@color/primaryTextColor"/>
-    </android.support.design.widget.AppBarLayout>
-
-
-    <!--bottom navbar-->
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="@color/primaryColor"
-        app:itemIconTint="@color/bttm_navbar_tab_colors"
-        app:itemTextColor="@color/bttm_navbar_tab_colors"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation"
-        android:elevation="8dp"
-        />
 
     <LinearLayout android:id="@+id/expLayout1"
         android:layout_width="fill_parent"
@@ -108,6 +75,49 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintTop_toBottomOf="@id/expLayout1"/>
+
+    <LinearLayout android:id="@+id/expLayout2"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        app:layout_constraintTop_toBottomOf="@id/exp_listView"
+
+        >
+
+        <TextView
+            android:id="@+id/reportTotal"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.25"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:padding="5dp"
+            android:singleLine="true"
+            android:text="@string/total_expense"
+            android:textAlignment="center"
+            android:textColor="@color/black_text"
+            android:textSize="18sp"
+            app:fontFamily="serif"
+            app:layout_constraintTop_toBottomOf="@id/exp_listView"
+            />
+
+        <TextView
+            android:id="@+id/reportTotalValue"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.25"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:padding="5dp"
+            android:singleLine="true"
+            android:textAlignment="center"
+            android:textColor="@color/primaryColor"
+            android:textSize="18sp"
+            app:fontFamily="serif"
+            app:layout_constraintTop_toBottomOf="@id/exp_listView" />
+
+
+    </LinearLayout>
 
 
 
