--- a/app/src/main/res/layout/card_view_projects.xml
+++ b/app/src/main/res/layout/card_view_projects.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:clickable="true"
         android:id="@+id/card_view_project"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
